[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Pawn.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pieces/WhitePawn.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5548, 13.9249 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 13 )

[node name="Pawn" type="KinematicBody2D" groups=[
"WhitePiece",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.501961, 1, 1, 1 )
position = Vector2( 0.111359, -2.56133 )
texture = ExtResource( 1 )
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -30 )

[node name="DoubleMoveRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -60 )

[node name="LeftAttackRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -40, -40 )

[node name="RightAttackRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, -40 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0364687, -0.0618063 )
shape = SubResource( 2 )

[node name="Move" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Move"]
position = Vector2( -0.235962, -33.0356 )
shape = SubResource( 3 )

[node name="DoubleMove" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoubleMove"]
position = Vector2( 0, -63.2396 )
shape = SubResource( 4 )

[node name="RightAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAttackArea"]
position = Vector2( 33.3036, -32.8316 )
shape = SubResource( 5 )

[node name="LeftAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAttackArea"]
position = Vector2( -33.7435, -33.2716 )
shape = SubResource( 6 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="Move" to="." method="_on_Move_mouse_entered"]
[connection signal="mouse_exited" from="Move" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="DoubleMove" to="." method="_on_DoubleMove_mouse_entered"]
[connection signal="mouse_entered" from="RightAttackArea" to="." method="_on_RightAttackArea_mouse_entered"]
[connection signal="mouse_exited" from="RightAttackArea" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="LeftAttackArea" to="." method="_on_LeftAttackArea_mouse_entered"]
[connection signal="mouse_exited" from="LeftAttackArea" to="." method="mouse_exited"]
